[package]
name = "project-bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = "4.5.2"
convert_case = "0.6.0"
curl = "0.4.44"
dialoguer = "0.11.0"
dotenv = "0.15.0"
serde_json = "1.0.111"
walkdir = "2.5.0"
tempfile = "3.10.1"
